force-app/main/default/objects/SptStatusRptsScores__c/SptStatusRptsScores__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Exposed scoring brackets for Support Status Reports</description>
    <label>Support Status Report Scoring</label>
</CustomObject>