force-app/main/default/objects/SptStatusRptsScores__c/fields/DemonstratesMax__c.field-meta.xml
<CustomField>
    <fullName>DemonstratesMax__c</fullName>
    <description>Max score in Demonstrates (D) bracket</description>
    <label>Demonstrates (D) Max</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>