force-app/main/default/objects/SptStatusRptsScores__c/fields/DemonstratesMin__c.field-meta.xml
<CustomField>
    <fullName>DemonstratesMin__c</fullName>
    <description>Min score in Demonstrates (D) bracket</description>
    <label>Demonstrates (D) Min</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>