force-app/main/default/objects/SptStatusRptsScores__c/fields/DoesNotDemonstrate__c.field-meta.xml
<CustomField>
    <fullName>DoesNotDemonstrate__c</fullName>
    <description>Threshold score for Does Not Demonstrate (DND)</description>
    <label>Does Not Demonstrate (DND)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>