force-app/main/default/objects/SptStatusRptsScores__c/fields/Exceeds_Score_10__c.field-meta.xml
<CustomField>
    <fullName>Exceeds_Score_10__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Exceeds Score 10</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>