force-app/main/default/objects/SptStatusRptsScores__c/fields/Exceeds_Score_2__c.field-meta.xml
<CustomField>
    <fullName>Exceeds_Score_2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Exceeds Score 2</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>