force-app/main/default/objects/SptStatusRptsScores__c/fields/ExceedsExpectations__c.field-meta.xml
<CustomField>
    <fullName>ExceedsExpectations__c</fullName>
    <description>Threshold score for Exceeds Expectations (EX)</description>
    <label>Exceeds Expectations (EX)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>