force-app/main/default/objects/SptStatusRptsScores__c/fields/NeedsDevelopmentMax__c.field-meta.xml
<CustomField>
    <fullName>NeedsDevelopmentMax__c</fullName>
    <description>Max score in Needs Development (ND) bracket</description>
    <label>Needs Development (ND) Max</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>