force-app/main/default/objects/SptStatusRptsScores__c/fields/NeedsDevelopmentMin__c.field-meta.xml
<CustomField>
    <fullName>NeedsDevelopmentMin__c</fullName>
    <description>Min score in Needs Development (ND) bracket</description>
    <label>Needs Development (ND) Min</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>